--- a/AoC/AoC.csproj
+++ b/AoC/AoC.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>AoC.Program</StartupObject>
+    <StartupObject>AoC2022_Exo2.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
